--- a/src/main/resources/templates/fragments/new-link-modal.html
+++ b/src/main/resources/templates/fragments/new-link-modal.html
@@ -40,7 +40,7 @@
                                     <div th:replace="~{fragments/form-field :: form-field('description', 'Description', 'text', 'save-input')}"></div>
                                 </div>
                                 <div class="col-span-2 hidden">
-                                    <div th:replace="~{fragments/form-field :: form-field('noteId', 'Note id', 'number', '')}"></div>
+                                    <div th:replace="~{fragments/form-field :: form-field('note', 'Note id', 'number', '')}"></div>
                                 </div>
                             </div>
                             <button type="submit"
