--- a/src/main/resources/templates/fragments/renew-link-modal.html
+++ b/src/main/resources/templates/fragments/renew-link-modal.html
@@ -37,7 +37,7 @@
                                     <div th:replace="~{fragments/form-field :: form-field('expiryTime', 'Expiry time', 'time', 'save-input')}"></div>
                                 </div>
                                 <div class="col-span-2 hidden">
-                                    <div th:replace="~{fragments/form-field :: form-field('linkId', 'Link id', 'number', '')}"></div>
+                                    <div th:replace="~{fragments/form-field :: form-field('link', 'Link id', 'number', '')}"></div>
                                 </div>
                             </div>
                             <button type="submit"
