--- a/src/main/resources/templates/note-links.html
+++ b/src/main/resources/templates/note-links.html
@@ -64,7 +64,7 @@
                             <form id="sure-to-delete" th:action="@{/delete/link}"
                                   class="modal-form inline-flex items-center"
                                   method="post" data-modal="delete-modal">
-                                <input type="hidden" name="linkId">
+                                <input type="hidden" name="link">
                                 <button type="submit"
                                         class="text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center">
                                     Yes, I'm sure
@@ -107,7 +107,7 @@
                         Link
                         <button id="new-file-create"
                                 class="modal-show text-white ml-6" data-modal="link-modal"
-                                th:attr="data-noteid=${noteId}">
+                                th:attr="data-note=${noteId}">
                             <svg class="-ms-1 w-5 h-5 bg-blue-600 rounded-md hover:bg-blue-700" fill="currentColor"
                                  viewBox="0 0 20 20"
                                  xmlns="http://www.w3.org/2000/svg">
@@ -147,7 +147,7 @@
                     <td class="py-4 flex justify-end px-6 gap-2">
                         <div th:insert="~{fragments/copy :: copy(${root + '/public/' + link.link + '/note/' + link.note.id}, ${link.id})}" class="flex items-center"></div>
                         <button class="modal-show flex items-center justify-end" data-modal="renew-link-modal"
-                                th:attr="data-linkId=${link.id}">
+                                th:attr="data-link=${link.id}">
                             <svg class="w-5 h-5 text-white hover:text-blue-600" aria-hidden="true"
                                  xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"
                                  viewBox="0 0 24 24">
@@ -157,7 +157,7 @@
                             </svg>
                         </button>
                         <button class="modal-show flex items-center justify-end" data-modal="delete-modal"
-                                th:attr="data-linkId=${link.id}, data-message=${'Are you sure you want to delete this link?'}">
+                                th:attr="data-link=${link.id}, data-message=${'Are you sure you want to delete this link?'}">
                             <svg class="w-5 h-5 text-red-500 hover:text-red-900" aria-hidden="true"
                                  xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"
                                  viewBox="0 0 24 24">
