Breadcrumb entry separator fixed

--- a/src/main/resources/templates/fragments/breadcrumb.html
+++ b/src/main/resources/templates/fragments/breadcrumb.html
@@ -37,7 +37,7 @@
                         <span th:text="${path[i / 2].name}" class="whitespace-nowrap"></span>
                     </a>
                 </div>
-                <span th:if="${i % 2 != 0}" class="mx-2 text-gray-400">/</span>
+                <span th:if="${i % 2 != 0}" class="mx-2 text-white">/</span>
             </li>
         </ol>
     </nav>
