Http methods have been changed

--- a/src/main/resources/templates/fragments/delete-modal.html
+++ b/src/main/resources/templates/fragments/delete-modal.html
@@ -33,7 +33,7 @@
                             <h3 id="delete-modal-msg" class="mb-5 text-lg font-normal text-gray-300"></h3>
                             <form id="sure-to-delete" th:action="${link}"
                                   class="modal-form inline-flex items-center"
-                                  method="post" data-modal="delete-modal">
+                                  method="post" data-modal="delete-modal" data-type="DELETE">
                                 <input type="hidden" name="noteId">
                                 <button type="submit"
                                         class="text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center">
