--- a/src/main/resources/templates/fragments/make-private-modal.html
+++ b/src/main/resources/templates/fragments/make-private-modal.html
@@ -29,11 +29,11 @@
                             <h3 id="make-private-modal-msg" class="mb-5 text-lg font-normal text-gray-300"></h3>
                             <form id="sure-to-delete" th:action="@{/entry/set/lock}"
                                   class="modal-form inline-flex items-center"
-                                  method="post" data-modal="make-private-modal">
+                                  method="post" data-modal="make-private-modal" data-type="PATCH">
                                 <input type="hidden" name="entryId">
                                 <input type="hidden" name="lock">
                                 <button type="submit"
-                                        class="text-white bg-blue-600 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center">
+                                        class="text-white bg-blue-600 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-600 font-medium rounded-lg text-sm px-5 py-2.5 text-center">
                                     Yes, I'm sure
                                 </button>
                             </form>
